Fixes bungee support

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -24,7 +24,8 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>LATEST</version>
+      <!-- <version>LATEST</version> -->
+      <version>1.7.2-R0.3</version>
       <type>jar</type>
     </dependency>
     <dependency>
