--- a/API/src/main/resources/plugin.yml
+++ b/API/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: MinigamesAPI
+name: MinigamesLib
 main: com.comze_instancelabs.minigamesapi.MinigamesAPI
 version: 1.4.0
 author: InstanceLabs
