--- a/1_7_R3/pom.xml
+++ b/1_7_R3/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.comze_instancelabs</groupId>
-  <artifactId>MinigamesAPI-1_7_R3</artifactId>
+  <artifactId>MinigamesLib-1_7_R3</artifactId>
   <version>v1_7_R3</version>
   <packaging>jar</packaging>
-  <name>MinigamesAPI-NMS-1_7_R3</name>
+  <name>MinigamesLib-NMS-1_7_R3</name>
   <description>v1_7_R3 NMS for MinigamesAPI</description>
   
   <parent>
     <groupId>com.comze_instancelabs</groupId>
-    <artifactId>MinigamesAPI-parent</artifactId>
+    <artifactId>MinigamesLib-parent</artifactId>
     <version>parent</version>
   </parent>
 
