--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.comze_instancelabs</groupId>
-  <artifactId>MinigamesAPI-parent</artifactId>
+  <artifactId>MinigamesLib-parent</artifactId>
   <version>parent</version>
   <packaging>pom</packaging>
-  <name>MinigamesAPI</name>
+  <name>MinigamesLib</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
