Adds basic party functionality and /party command

--- a/API/src/main/resources/plugin.yml
+++ b/API/src/main/resources/plugin.yml
@@ -7,3 +7,6 @@ commands:
    mapi:
       description: Main command
       usage: /mapi [action]
+   party:
+      description: Main Party command
+      usage: /party [action]
