--- a/API/pom.xml
+++ b/API/pom.xml
@@ -15,6 +15,10 @@
 	</parent>
 
 	<repositories>
+	   <repository>
+            <id>private-crackshot-repo</id>
+            <url>http://www.instancedev.com/bukkitdev/MinigamesAPI/dependencies/Crackshot/maven/</url>
+        </repository>
 		<repository>
 			<id>vault-repo</id>
 			<url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
@@ -35,13 +39,12 @@
 			<version>1.3.01</version>
 			<scope>provided</scope>
 		</dependency>
-		<!--  <dependency>
-			<groupId>com.comze_instancelabs</groupId>
-			<artifactId>MinigamesAPI-1_7_R3</artifactId>
-			<version>v1_7_R3</version>
-			<type>jar</type>
-			<optional>true</optional>
-		</dependency>-->
+		<dependency>
+            <groupId>com.shampaggon.crackshot</groupId>
+            <artifactId>Crackshot</artifactId>
+            <version>0.97.13</version>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 <properties>
