Adds debug command

--- a/API/src/main/resources/plugin.yml
+++ b/API/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ commands:
    mapi:
       description: Main command
       usage: /mapi [action]
+      aliases: [mgapi, mglib]
    party:
       description: Main Party command
       usage: /party [action]
