--- a/API/pom.xml
+++ b/API/pom.xml
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>com.github.MCE-Plugins</groupId>
 		<artifactId>MinigamesLib-parent</artifactId>
-		<version>1.0</version>
+		<version>1.14.9-SNAPSHOT</version>
 	</parent>
 
 	<repositories>
@@ -29,20 +29,14 @@
 		<dependency>
 			<groupId>org.bukkit</groupId>
   			<artifactId>bukkit</artifactId>
-  			<version>1.10-R0.1-SNAPSHOT</version>
-  			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>1.3.01</version>
-			<scope>provided</scope>
 		</dependency>
 		<dependency>
             <groupId>com.shampaggon.crackshot</groupId>
             <artifactId>Crackshot</artifactId>
-            <version>0.97.13</version>
-            <scope>provided</scope>
         </dependency>
 	</dependencies>
 
