--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.MCE-Plugins</groupId>
 	<artifactId>MinigamesLib-parent</artifactId>
-	<version>1.0</version>
+	<version>1.14.9-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>MinigamesLib-parent</name>
 	<properties>
@@ -25,5 +25,34 @@
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
 		</repository>
 	</repositories>
+	
+	<dependencyManagement>
+	<dependencies>
+		<dependency>
+			<groupId>org.bukkit</groupId>
+  			<artifactId>bukkit</artifactId>
+  			<version>1.10-R0.1-SNAPSHOT</version>
+  			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.github.MCE-Plugins</groupId>
+  			<artifactId>MinigamesLib</artifactId>
+  			<version>1.14.9-SNAPSHOT</version>
+  			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.milkbowl.vault</groupId>
+			<artifactId>Vault</artifactId>
+			<version>1.3.01</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+            <groupId>com.shampaggon.crackshot</groupId>
+            <artifactId>Crackshot</artifactId>
+            <version>0.97.13</version>
+            <scope>provided</scope>
+        </dependency>
+	</dependencies>
+	</dependencyManagement>
 
 </project>
