moved foreign repositories to parent

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
 		</repository>
+	   <repository>
+            <id>private-crackshot-repo</id>
+            <url>http://www.instancedev.com/bukkitdev/MinigamesAPI/dependencies/Crackshot/maven/</url>
+        </repository>
+		<repository>
+			<id>vault-repo</id>
+			<url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+		</repository>
 	</repositories>
 	
 	<dependencyManagement>
