--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,8 @@
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots</url>
 		</repository>
 	   <repository>
-            <id>private-crackshot-repo</id>
-            <url>http://www.instancedev.com/bukkitdev/MinigamesAPI/dependencies/Crackshot/maven/</url>
+            <id>mce-repos</id>
+            <url>http://nexus.xworlds.eu/nexus/content/groups/mce/</url>
         </repository>
 		<repository>
 			<id>vault-repo</id>
@@ -51,13 +51,13 @@
 		<dependency>
 			<groupId>net.milkbowl.vault</groupId>
 			<artifactId>Vault</artifactId>
-			<version>1.3.01</version>
+			<version>1.5.6</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
             <groupId>com.shampaggon.crackshot</groupId>
             <artifactId>Crackshot</artifactId>
-            <version>0.97.13</version>
+            <version>0.98.5</version>
             <scope>provided</scope>
         </dependency>
 	</dependencies>
