fixes https://github.com/MysticCity/MinigamesAPI/issues/27 activated maven resource filtering

--- a/API/pom.xml
+++ b/API/pom.xml
@@ -30,6 +30,12 @@
 	</dependencies>
 
 	<build>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<version>3.0.0</version>
