changed plugin.xml version from xxx-SNAPSHOT to xxx-timestamp as suggested in https://github.com/MysticCity/MinigamesAPI/issues/27

--- a/API/src/main/resources/plugin.yml
+++ b/API/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MinigamesLib
 main: com.comze_instancelabs.minigamesapi.MinigamesAPI
-version: ${version}
+version: ${minigames.releaseversion}-${minigames.timestamp}
 author: [InstanceLabs, MysticCity, MasteroftheHell, TheMrQuake, mepeisen]
 softdepend: [Vault]
 commands:
