--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>1.8</java.version>
 		<junit.version>4.12</junit.version>
+		<minigames.releaseversion>1.14.9</minigames.releaseversion>
+		<minigames.timestamp>${maven.build.timestamp}</minigames.timestamp>
+		<maven.build.timestamp.format>yyyyMMdd.HHmmss</maven.build.timestamp.format>
 	</properties>
 	<description>Rich Minigames API and base of all of my new minigames.</description>
 
