--- a/API/pom.xml
+++ b/API/pom.xml
@@ -27,6 +27,19 @@
             <groupId>com.shampaggon.crackshot</groupId>
             <artifactId>Crackshot</artifactId>
         </dependency>
+        
+        <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>org.powermock</groupId>
+        	<artifactId>powermock-module-junit4</artifactId>
+        </dependency>
+        <dependency>
+        	<groupId>org.powermock</groupId>
+        	<artifactId>powermock-api-mockito</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -89,6 +102,36 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+        	<plugin>
+        		<groupId>org.jacoco</groupId>
+        		<artifactId>jacoco-maven-plugin</artifactId>
+        		<version>0.7.6.201602180812</version>
+        		<executions>
+        			<execution>
+        			    <id>default-prepare-agent</id>
+        			    <goals><goal>prepare-agent</goal></goals>
+        			</execution>
+        			<execution>
+        			    <id>default-report</id>
+        			    <phase>prepare-package</phase>
+        			    <goals><goal>report</goal></goals>
+        			</execution>
+        			<execution>
+        			    <id>default-check</id>
+        			    <goals><goal>check</goal></goals>
+        			    <configuration>
+        			    	<rules>
+        			    	</rules>
+                        </configuration>
+                    </execution>
+                    <execution>
+                    	<id>jacoco-site</id>
+                    	<phase>verify</phase>
+                    	<goals><goal>report</goal></goals>
+                  	</execution>
+                </executions>
+        	</plugin>
 		</plugins>
 	</build>
 
