--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<java.version>1.8</java.version>
+		<powermock.version>1.6.5</powermock.version>
 		<junit.version>4.12</junit.version>
 		<minigames.releaseversion>1.14.9</minigames.releaseversion>
 		<minigames.timestamp>${maven.build.timestamp}</minigames.timestamp>
@@ -62,6 +63,25 @@
             <artifactId>Crackshot</artifactId>
             <version>0.98.5</version>
             <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        	<version>${junit.version}</version>
+        	<scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.powermock</groupId>
+        	<artifactId>powermock-module-junit4</artifactId>
+        	<version>${powermock.version}</version>
+        	<scope>test</scope>
+        </dependency>
+        <dependency>
+        	<groupId>org.powermock</groupId>
+        	<artifactId>powermock-api-mockito</artifactId>
+        	<version>${powermock.version}</version>
+        	<scope>test</scope>
         </dependency>
 	</dependencies>
 	</dependencyManagement>
