--- a/API/pom.xml
+++ b/API/pom.xml
@@ -107,14 +107,6 @@
 				</executions>
 			</plugin>
 			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>${argLine}</argLine>
-				</configuration>
-			</plugin>
-			
         	<plugin>
         		<groupId>org.jacoco</groupId>
         		<artifactId>jacoco-maven-plugin</artifactId>
@@ -123,27 +115,28 @@
         			<execution>
         			    <id>default-prepare-agent</id>
         			    <goals><goal>prepare-agent</goal></goals>
+        			    <configuration>
+        			    	<propertyName>surefireArgLine</propertyName>
+        			    </configuration>
         			</execution>
         			<execution>
         			    <id>default-report</id>
-        			    <phase>prepare-package</phase>
+        			    <phase>test</phase>
         			    <goals><goal>report</goal></goals>
-        			</execution>
-        			<execution>
-        			    <id>default-check</id>
-        			    <goals><goal>check</goal></goals>
         			    <configuration>
-        			    	<rules>
-        			    	</rules>
-                        </configuration>
-                    </execution>
-                    <execution>
-                    	<id>jacoco-site</id>
-                    	<phase>verify</phase>
-                    	<goals><goal>report</goal></goals>
-                  	</execution>
+        			    	<outputDirectory>${project.build.directory}/coverage-report</outputDirectory>
+        			    </configuration>
+        			</execution>
                 </executions>
         	</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>${surefireArgLine}</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
