--- a/LIBv2/pom.xml
+++ b/LIBv2/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>MinigamesPlugin</artifactId>
 	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
-	<name>MinigamesAPI</name>
+	<name>MinigamesAPI Plugin</name>
 	<description>Rich Minigames API V2</description>
 	
 	<properties>
@@ -40,6 +40,84 @@
         <dependency>
         	<groupId>org.powermock</groupId>
         	<artifactId>powermock-api-mockito</artifactId>
+        </dependency>
+        
+        <dependency>
+        	<groupId>com.github.MCE-Plugins</groupId>
+        	<artifactId>MinigamesPlugin_nmsapi</artifactId>
+        	<version>${project.version}</version>
+        	<exclusions>
+        		<exclusion>
+        		    <groupId>org.spigotmc</groupId>
+        			<artifactId>spigotmc</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>com.github.MCE-Plugins</groupId>
+        	<artifactId>MinigamesPlugin_nms1_10_r1</artifactId>
+        	<version>${project.version}</version>
+        	<exclusions>
+        		<exclusion>
+        		    <groupId>org.spigotmc</groupId>
+        			<artifactId>spigotmc</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>com.github.MCE-Plugins</groupId>
+        	<artifactId>MinigamesPlugin_nms1_9_r2</artifactId>
+        	<version>${project.version}</version>
+        	<exclusions>
+        		<exclusion>
+        		    <groupId>org.spigotmc</groupId>
+        			<artifactId>spigotmc</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>com.github.MCE-Plugins</groupId>
+        	<artifactId>MinigamesPlugin_nms1_9_r1</artifactId>
+        	<version>${project.version}</version>
+        	<exclusions>
+        		<exclusion>
+        		    <groupId>org.spigotmc</groupId>
+        			<artifactId>spigotmc</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>com.github.MCE-Plugins</groupId>
+        	<artifactId>MinigamesPlugin_nms1_8_r3</artifactId>
+        	<version>${project.version}</version>
+        	<exclusions>
+        		<exclusion>
+        		    <groupId>org.spigotmc</groupId>
+        			<artifactId>spigotmc</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>com.github.MCE-Plugins</groupId>
+        	<artifactId>MinigamesPlugin_nms1_8_r2</artifactId>
+        	<version>${project.version}</version>
+        	<exclusions>
+        		<exclusion>
+        		    <groupId>org.spigotmc</groupId>
+        			<artifactId>spigotmc</artifactId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        <dependency>
+        	<groupId>com.github.MCE-Plugins</groupId>
+        	<artifactId>MinigamesPlugin_nms1_8_r1</artifactId>
+        	<version>${project.version}</version>
+        	<exclusions>
+        		<exclusion>
+        		    <groupId>org.spigotmc</groupId>
+        			<artifactId>spigotmc</artifactId>
+        		</exclusion>
+        	</exclusions>
         </dependency>
 	</dependencies>
 
