--- a/APIv2/pom.xml
+++ b/APIv2/pom.xml
@@ -107,5 +107,35 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-jxr-plugin</artifactId>
+			    <version>2.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.jacoco</groupId>
+        		<artifactId>jacoco-maven-plugin</artifactId>
+        		<version>0.7.6.201602180812</version>
+        		<reportSets>
+        			<reportSet>
+        				<reports>
+        					<report>report</report>
+        				</reports>
+        			</reportSet>
+        		</reportSets>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
