--- a/LIBv2/pom.xml
+++ b/LIBv2/pom.xml
@@ -1,87 +1,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.minigameslib.mglib</groupId>
 	<artifactId>MinigamesPlugin</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>MinigamesAPI</name>
 	<description>Rich Minigames API V2</description>
-  
-  <properties>
-  		<maven.source.plugin.version>3.0.0</maven.source.plugin.version>
-  		<maven.javadoc.plugin.version>2.10.3</maven.javadoc.plugin.version>
-  		<jacoco.plugin.version>0.7.6.201602180812</jacoco.plugin.version>
-  		<maven.jxr.plugin.version>2.1</maven.jxr.plugin.version>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-		<java.version>1.8</java.version>
-  </properties>
-  
-  <dependencyManagement>
-  	<dependencies>
-	  	<dependency>
-	  		<groupId>de.minigameslib.mclib</groupId>
-	  		<artifactId>spigot-1.11.2-R0.1-api-bom</artifactId>
-	  		<version>0.0.1-SNAPSHOT</version>
-	  		<type>pom</type>
-	  		<scope>import</scope>
-	  	</dependency>
-  	</dependencies>
-  </dependencyManagement>
+	
+	<parent>
+		<groupId>de.minigameslib.mglib</groupId>
+		<artifactId>Minigames-Parent</artifactId>
+		<version>2.0.0-SNAPSHOT</version>
+	</parent>
 
 	<dependencies>
 		<dependency>
-			<groupId>de.minigameslib.mclib</groupId>
-			<artifactId>mclib-api</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>de.minigameslib.mclib</groupId>
-			<artifactId>mclib</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
 			<groupId>de.minigameslib.mglib</groupId>
 			<artifactId>MinigamesAPI</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
-	
-	    <dependency>
-	      <groupId>org.spigotmc</groupId>
-	      <artifactId>spigot-api</artifactId>
-	    </dependency>
-		
-        <dependency>
-        	<groupId>junit</groupId>
-        	<artifactId>junit</artifactId>
-        </dependency>
-        <dependency>
-        	<groupId>org.powermock</groupId>
-        	<artifactId>powermock-module-junit4</artifactId>
-        </dependency>
-        <dependency>
-        	<groupId>org.powermock</groupId>
-        	<artifactId>powermock-api-mockito</artifactId>
-        </dependency>
 	</dependencies>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-        	<resource>
-            	<directory>src/main/java</directory>
-            	<includes>
-                	<include>**/*.properties</include>
-            	</includes>
-        	</resource>
-    	</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -105,133 +44,5 @@
 			</plugin>
 		</plugins>
 	</build>
-  
-  <profiles>
-  	<profile>
-  		<id>mclib.withjavadocreport</id>
-  		<activation><activeByDefault>true</activeByDefault></activation>
-  		<reporting><plugins>
-  			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-  			</plugin>
-  		</plugins></reporting>
-  	</profile>
-  	<profile>
-  		<id>mclib.withtestreport</id>
-  		<activation><activeByDefault>true</activeByDefault></activation>
-  		<reporting><plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-			</plugin>
-  		</plugins></reporting>
-  	</profile>
-  	<profile>
-  		<id>mclib.withsourcereport</id>
-  		<activation><activeByDefault>true</activeByDefault></activation>
-  		<reporting><plugins>
-			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-jxr-plugin</artifactId>
-			    <version>${maven.jxr.plugin.version}</version>
-			</plugin>
-  		</plugins></reporting>
-  	</profile>
-  	
-  	<profile>
-  		<id>mclib.withsources</id>
-  		<activation><activeByDefault>true</activeByDefault></activation>
-  		<build>
-  		<plugins>
-			<plugin>
-				<version>${maven.source.plugin.version}</version>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-  		</build>
-  	</profile>
-  	<profile>
-  		<id>mclib.withjavadoc</id>
-  		<activation><activeByDefault>true</activeByDefault></activation>
-  		<build>
-  		<plugins>
-			<plugin>
-				<version>${maven.javadoc.plugin.version}</version>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>attach-javadoc</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-  		</build>
-  	</profile>
-  	<profile>
-  		<id>mclib.withcoverage</id>
-  		<activation><activeByDefault>true</activeByDefault></activation>
-  		<build>
-  		<plugins>
-  			<plugin>
-        		<groupId>org.jacoco</groupId>
-        		<artifactId>jacoco-maven-plugin</artifactId>
-        		<version>${jacoco.plugin.version}</version>
-        		<executions>
-        			<execution>
-        			    <id>default-prepare-agent</id>
-        			    <goals><goal>prepare-agent</goal></goals>
-        			    <configuration>
-        			    	<propertyName>surefireArgLine</propertyName>
-        			    </configuration>
-        			</execution>
-        			<execution>
-        			    <id>default-report</id>
-        			    <phase>test</phase>
-        			    <goals><goal>report</goal></goals>
-        			    <configuration>
-        			    	<outputDirectory>${project.build.directory}/coverage-report</outputDirectory>
-        			    </configuration>
-        			</execution>
-                </executions>
-        	</plugin>
-        	<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<argLine>${surefireArgLine}</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-  		</build>
-  		<reporting><plugins>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-        		<artifactId>jacoco-maven-plugin</artifactId>
-        		<version>${jacoco.plugin.version}</version>
-        		<reportSets>
-        			<reportSet>
-        				<reports>
-        					<report>report</report>
-        				</reports>
-        			</reportSet>
-        		</reportSets>
-			</plugin>
-  		</plugins></reporting>
-  	</profile>
-  </profiles>
 
 </project>
